--- a/Diurnal_Analysis_ref.Rmd
+++ b/Diurnal_Analysis_ref.Rmd
@@ -363,16 +363,16 @@ subjdf$ExecFunction<-cogdatasub$ExecFunction
 library(refund)
 ###############cognitive scores as outcome###########
 fit.lf1 <- pfr(ATTN~ age+Sex+education+lf(actmat,argvals=(binmid/60), k=12, bs="ps",m=2),data = subjdf)
-summary(fit.lf1,xlab="t",ylab=expression(paste(beta(t))))
-plot(fit.lf1,xlab="t",ylab=expression(paste(beta(t))))
+summary(fit.lf1)
+plot(fit.lf1,xlab="t",ylab=expression(paste(beta(t))),main="effect on ATTN")
 abline(h=0)
 fit.lf2 <- pfr(VM~ age+Sex+education+lf(actmat,argvals=(binmid/60), k=12, bs="ps",m=2),data = subjdf)
 summary(fit.lf2)
-plot(fit.lf2,xlab="t",ylab=expression(paste(beta(t))))
+plot(fit.lf2,xlab="t",ylab=expression(paste(beta(t))),main="effect on VM")
 abline(h=0)
 fit.lf3 <- pfr(ExecFunction~ age+Sex+education+lf(actmat,argvals=(binmid/60), k=12, bs="ps",m=2),data = subjdf)
 summary(fit.lf3)
-plot(fit.lf3,xlab="t",ylab=expression(paste(beta(t))))
+plot(fit.lf3,xlab="t",ylab=expression(paste(beta(t))),main="effect on ExecFunction")
 abline(h=0)
 ```
 
@@ -512,15 +512,15 @@ library(refund)
 ###############cognitive scores as outcome###########
 fit.lf1 <- pfr(ATTN~ age+Sex+education+lf(actmat,argvals=binmid/60, k=12, bs="ps",m=2),data = subjdf)
 summary(fit.lf1)
-plot(fit.lf1,xlab="t",ylab=expression(paste(beta(t))))
+plot(fit.lf1,xlab="t",ylab=expression(paste(beta(t))),main="effect on ATTN")
 abline(h=0)
 fit.lf2 <- pfr(VM~ age+Sex+education+lf(actmat,argvals=binmid/60, k=12, bs="ps",m=2),data = subjdf)
 summary(fit.lf2)
-plot(fit.lf2,xlab="t",ylab=expression(paste(beta(t))))
+plot(fit.lf2,xlab="t",ylab=expression(paste(beta(t))),main="effect on VM")
 abline(h=0)
 fit.lf3 <- pfr(ExecFunction~ age+Sex+education+lf(actmat,argvals=binmid/60, k=12, bs="ps",m=2),data = subjdf)
 summary(fit.lf3)
-plot(fit.lf3,xlab="t",ylab=expression(paste(beta(t))))
+plot(fit.lf3,xlab="t",ylab=expression(paste(beta(t))),main="effect on ExecFunction")
 abline(h=0)
 ```
 
