--- a/Diurnal_Analysis_ref.Rmd
+++ b/Diurnal_Analysis_ref.Rmd
@@ -47,7 +47,7 @@ Non-invasive, cost-effective biomarkers are essential to improving diagnosis of 
 Mild AD (n = 39) and cognitive normal control (CNC; n = 53) participants from the University of Kansas Alzheimer’s Disease Center Registry (KU-ADC) wore a GT3x+ accelerometer for 24 hours a day for seven days. The objective is to explore the efficacy of continuously measured physical activity to differentiate between mild AD and CNC participants and study its association with cognitive performance. Participant demographics are displayed in Table 1
 below.
 
-![](E:/JHUPD/Paper1/sd final results/demtable1.JPG)
+![](E:/JHUPD/Paper1/sd final results/dempap3.JPG)
 
 
 
